# scriptbots

./: .#MLPBrain.cpp  .clang-format  .cproject  .gitignore  .project  Agent.cpp  Agent.h  Base.cpp  Base.h  CMakeLists.txt  CMakeSettings.json  DWRAONBrain.cpp  DWRAONBrain.h  GLView.cpp  GLView.h  MLPBrain.cpp  MLPBrain.h  Makefile  PerfTimer.cpp  PerfTimer.h  README.markdown  README.txt  World.cpp  World.h  autorun.h  autorun.sh  boost.h  boosty.h  config.h.in  demo  demo.cpp  demo_dave  demo_dave.cpp  example  example.cpp  example_compile.sh  glut.h  gmon.out  helpers.h  main.cpp  (+24 more)
cmake/: glad.cmake  glfw.cmake  glm.cmake  sdl3.cmake  shaders.cmake  simde.cmake
examples/: demo.cpp  demo_dave  demo_dave.cpp  demo_dave.sh  example.cpp
include/: AVXBrain.h  Agent.h  Base.h  Food.h  GLView.h  MLPBrain.h  PerfTimer.h  View.h  World.h  helpers.h  lock.h  mtwister.h  queue.h  settings.h  vec.h  vec2f.h  vmath.h
src/: AVXBrain.c  Agent.c  Agent.cpp  Base.c  Base.cpp  DWRAONBrain.cpp  Food.c  GLView.c  GLView.cpp  MLPBrain.c  MLPBrain.cpp  PerfTimer.cpp  View.cpp  World.c  World.cpp  helpers.c  helpers.cpp  lock.c  main.c  main.cpp  mtwister.c  queue.c  vec.c  vec.cpp  vec2f.c  vec2f.cpp  vmath.cpp
tests/: vec2f.c  vec2f.cpp
